--- a/documents/swagger-yaml/cp1-ta.yaml
+++ b/documents/swagger-yaml/cp1-ta.yaml
@@ -208,6 +208,14 @@ paths:
           description: successfully determined the current state of the SUT
           schema:
             type: object
+            required:
+              - x
+              - 'y'
+              - w
+              - v
+              - charge
+              - predicted_arrival
+              - sim_time
             properties:
               x:
                 type: number
