--- a/documents/swagger-yaml/cp3-th.yaml
+++ b/documents/swagger-yaml/cp3-th.yaml
@@ -17,12 +17,6 @@ paths:
           schema:
             type: object
             properties:
-              map_to_use:
-                type: string
-                format: MapMnemonic
-                description: >-
-                  the name of the map to use for this test, must be from the
-                  list of agreed upon map names
               start_loc:
                 type: string
                 description: >-
@@ -31,29 +25,6 @@ paths:
               target_loc:
                 type: string
                 description: the name of the goal map waypoint
-              initial_config:
-                type: object
-                description: >-
-                  initial configuration of the robot internals (subject to change)
-                properties:
-                  sensors:
-                    type: array
-                    items:
-                      type: string
-                    description: the set of sensors TODO
-                  localization:
-                    type: string
-                    enum:
-                      - algo1
-                      - algo2
-                      - algo3
-                    description: which localization algorithm to use
-                  navigation_config:
-                    type : string
-                    enum:
-                      - algo1
-                      - algo2
-                      - algo3
               use_adaptation:
                 type: boolean
                 description: >-
@@ -73,19 +44,15 @@ paths:
           schema:
             type: object
             required:
-              - ERROR
-              - MESSAGE
+              - error
             properties:
-              ERROR:
+              error:
                 description: one of a enumerated set of reasons that errors may arise
                 type: string
                 enum:
-                  - TEST_CONFIG_ERROR
-                  - TEST_DATA_FORMAT_ERROR
-                  - DAS_LOG_FILE_ERROR
-                  - DAS_OTHER_ERROR
-              MESSAGE:
-                description: human readable text describing the error
+                  - ??? todo ???
+              message:
+                description: human readable text describing the error, if possible
                 type: string
       responses:
         '200':
@@ -108,48 +75,41 @@ paths:
           schema:
             type: object
             required:
-              - ERROR
-              - MESSAGE
+              - status
               - sim_time
             properties:
-              ERROR:
+              status:
                 description: >-
                   one of a enumerated set of reasons that errors may
                   arise, described as follows
-                   * BOOTING - TODO
-                   * BOOTED - TODO
-                   * ONLINE - TODO
-                   * PERTURBATION_DETECTED - TODO
-                   * MISSION_SUSPENDED - TODO
-                   * MISSION_RESUMED - TODO
-                   * MISSION_HALTED - TODO
-                   * MISSION_ABORTED - TODO
-                   * ADAPTATION_INITIATED - TODO
-                   * ADAPTATION_COMPLETED - TODO
-                   * ADAPTATION_STOPPED - TODO
-                   * TEST_ERROR - TODO
                 type: string
                 enum:
-                  - BOOTING
-                  - BOOTED
-                  - ONLINE
-                  - PERTURBATION_DETECTED
-                  - MISSION_SUSPENDED
-                  - MISSION_RESUMED
-                  - MISSION_HALTED
-                  - MISSION_ABORTED
-                  - ADAPTATION_INITIATED
-                  - ADAPTATION_COMPLETED
-                  - ADAPTATION_STOPPED
-                  - TEST_ERROR
-              MESSAGE:
-                description: human readable text describing the status
+                  - live ## up after config, ready for initial perturbs
+                  - mission_running ## after /start, the robot is actually moving
+                  - adapting ## not allowed to perturb
+                  - adapted  ## allowed to perturb again; updates plan
+                             ## config and sensors
+              message:
+                description: human readable text describing the status, if any
                 type: string
               sim_time:
                 type: integer
+                minimum: 0
                 description: >-
                   the time inside the simulation when the status message was
                   produced
+              plan:
+                description: >-
+                  list of waypoints the current plan tends to visit, in
+                  order. this will be sent if and only if `status == adapted`.
+              config:
+                description: >-
+                  list of currently active nodes. this will be sent if and
+                  only if `status == adapted`.
+              sensors:
+                description: >-
+                  list of currently active sensors, in order. this will be
+                  sent if and only if `status == adapted`.
       responses:
         '200':
           description: the TH acknowledges the status of the SUT
@@ -165,16 +125,13 @@ paths:
           schema:
             type: object
             required:
-              - TARGET
-              - REASON
-              - sim_time
+              - final_location
+              - final_sim_time
+              - predicted_arrival_time
+              - initial_predicted_arrival_time
+              - num_predictions
+              - final_charge
             properties:
-              TARGET:
-                type: string
-                description: TODO
-              REASON:
-                type: string
-                description: 'TODO, make this an enum?'
               sim_time:
                 type: integer
                 description: the simulation time when the mission finished
